# panoramic-to-3dgs

./: .gitignore  config.yaml  datatype.py  main.py  pipeline_batched.py  pyproject.toml  readme.md  requirements.txt  requirements_me.txt
ImageCleaner/: test_qwen_cleaner.py
components/: BatchAligner.py  SpatialGrouper.py
components/DepthGenerator/: DA360DepthModel.py
components/DepthMapGenerator/: DA360DepthModel.py  DA3Model.py
components/ImageCleaner/: ImageCleaner.py
components/Saver/: Saver.py
components/SplatGenerator/: GS3DGenerator.py  SplatGenerator.py
components/SplatProcessor/: SplatProcessor.py  alignment.py  utils.py
components/ViewExtractor/: ViewExtractor.py
data/inputs/garden_2/: metadata.json
data/inputs/pano_garden/: metadata.json
data/inputs/panoramas_1777658753296/: metadata.json  pano_-dTI6ZMrH-_JyvUjltejqw_depth.npy  pano_0QQVVK-oVtsbqSfWea_svQ_depth.npy  pano_3ALWqIbn6Zm_a9wvWalNDQ_depth.npy  pano_3pfEt16qdpBbX6OHz5LtDg_depth.npy  pano_4bCIfxVM7ikhKUN7-5TYFA_depth.npy  pano_5FXWp3Jz-1Osuyp3wzchbQ_depth.npy  pano_7KlrDOZF6sUlCkcDZkycBQ_depth.npy  pano_7itoXPyyS9YgMegXCczewQ_depth.npy  pano_Dbjlj4JOCzFHU44ltpdHUg_depth.npy  pano_FhTLnuTJa7iQag_tI1ggQQ_depth.npy  (+18 more)
data_helvipad/: 0001.pcd
data_helvipad/2024/: 0001.pcd
functions/: Equirec2Perspec.py  depth_align.py  depth_to_pointcloud.py  extract_views_from_panorama.py  process_splats.py  sharp_infer.py
panoramic_to_3dgs/: __init__.py  config.py  pipeline.py
reference/: README.md  depth_anything_3.md  hunyuan_world_2.0  insp_to_splat.py  lyra2.md
(+13 files in other folders)
